ddetect (0.97) UNRELEASED; urgency=low

  * Per Olofsson
    - Added question about PCMCIA resource range options.
  * Bastian Blank
    - hw-detect-full enhanced hw-detect.

 -- Bastian Blank <waldi@debian.org>  Fri, 21 May 2004 14:18:37 +0200

ddetect (0.96) unstable; urgency=low

  * Joey Hess
    - Change the wording of the question before starting pcmcia;
      no detection of pcmcia is done before asking this question because the
      most reliable way to detect pcmcia is to try to start it (discover's
      pcmcia bridge detection may not work in all cases). Closes: #249420
  * Joshua Kwan
    - It turns out our PCMCIA detection heuristics really suck, so do
      not assume that /var/run/stab automatically exists if cardmgr has been
      started, otherwise hw-detect will error out. Do a -f check to work
      around it for now.
    - Change IFS to " " for netdev parsing state, restore it later.
      Fixes cases where one would see 'eth0 eth1: Device name', thanks
      Cit <debian@loathe.ms>.
  * Updated translations:
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede
    - Spanish (es.po) by Javier Fernández-Sanguino
    - Basque (eu.po) by Piarres Beobide Egaña
    - French (fr.po) by Christian Perrier
    - Hungarian (hu.po) by VERÓK István
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Russian (ru.po) by Nikolai Prokoschenko
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Turkish (tr.po) by Osman Yüksel
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joshua Kwan <joshk@triplehelix.org>  Tue, 18 May 2004 10:16:13 -0700

ddetect (0.95) unstable; urgency=low

  * Colin Watson