@@ -2,10 +2,16 @@ ddetect (0.97) UNRELEASED; urgency=low
 
   * Per Olofsson
     - Added question about PCMCIA resource range options.
+  * Joshua Kwan
+    - Refine our PCMCIA heuristic on 2.6 by checking for the existence of
+      any directories in /sys/class/pcmcia_socket. Thanks Russell King
+      <rmk+pcmcia@arm.linux.org.uk>.
+    - Try hard to only apt-install pcmcia-cs and generate PCMCIA devnames
+      once.
   * Bastian Blank
     - hw-detect-full enhanced hw-detect.
 
- -- Bastian Blank <waldi@debian.org>  Fri, 21 May 2004 14:18:37 +0200
+ -- Joshua Kwan <joshk@triplehelix.org>  Fri, 21 May 2004 16:32:49 -0700
 
 ddetect (0.96) unstable; urgency=low
 
